# fastapi-hotel

./: .env.example  .gitignore  Dockerfile  README.md  ReadmeToStart.md  config.py  docker-compose.yaml  entry.sh  main.py  pyproject.toml  req.txt
alembic/: env.py
alembic/versions/: 1337e5651588_add_cascad_delete.py  598149d15caf_add_index_to_where_columns.py  5aac749dac54_init_db.py  7b50da07b177_change_uuid_field.py  a8d1acdd2280_init_db.py  f314a6f5861a_change_date_field.py
app/: __init__.py  log.py
app/db/: __init__.py  db.py
app/jwt_secrets_token/: __init__.py  token_utils.py
app/models/: __init__.py  base.py
app/models/rooms/: __init__.py  rooms.py
app/models/rooms/rooms_schema/: __init__.py  rooms_schema.py
app/models/users/: users.py
app/models/users/users_schema/: __init__.py  users_schema.py
app/utils/: __init__.py  roles.py
app/views/: __init__.py  views.py
docker/postgresql/: Dockerfile  init.sh
