[tool.poetry]
name = "FastAPI Hotel"
version = "1.0.0"
description = "API отеля с предоствалением возможности авторизации и манипулированиния данными в соответствии с документацией Swagger"
authors = ["Nikolai Filippov <nikolai.filippov@simbirsoft.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
asyncpg = "^0.25.0"
alembic = "^1.7.6"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
PyJWT = "^2.3.0"
python-dotenv = "^0.19.2"
bcrypt = "^3.2.0"
httpx = "^0.22.0"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
